UHF-6017: Updated top bar navigation block id and check for the global navigation existence.

--- a/templates/block/block--external-menu-block-fallback.html.twig
+++ b/templates/block/block--external-menu-block-fallback.html.twig
@@ -65,7 +65,7 @@
           <div class="mmenu__footer js-mmenu__footer">
 
             {% set inside_cssmenu = true %}
-            {{ drupal_entity('block', 'headertopnavigation')}}
+            {{ drupal_entity('block', 'external_header_top_navigation')}}
 
             <div class="mmenu__logo">
               {% set link_label %}
