UHF-5698: Made accessibility fixes to pager, fixed ajax issue with next and previus buttons

--- a/templates/views/views-view.html.twig
+++ b/templates/views/views-view.html.twig
@@ -38,7 +38,11 @@
     dom_id ? 'js-view-dom-id-' ~ dom_id,
   ]
 %}
-<div{{attributes.addClass(classes)}}>
+{% if pager %}
+  <section{{attributes.addClass(classes)}} aria-live="assertive">
+{% else %}
+  <div{{attributes.addClass(classes)}}>
+{% endif %}
   {{ title_prefix }}
   {{ title }}
   {{ title_suffix }}
@@ -67,4 +71,8 @@
   {% endif %}
 
   {{ feed_icons }}
+{% if pager %}
+</section>
+{% else %}
 </div>
+{% endif %}
