--- a/src/scss/06_components/navigation/_full-pagination.scss
+++ b/src/scss/06_components/navigation/_full-pagination.scss
@@ -31,6 +31,14 @@
   }
 }
 
+.hds-pagination__button-prev,
+.hds-pagination__button-next {
+  list-style: none;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 0;
+}
+
 .hds-pagination__button-prev {
   float: left;
   margin-right: 8px;
