--- a/templates/navigation/pager.html.twig
+++ b/templates/navigation/pager.html.twig
@@ -36,14 +36,17 @@
       {# Print previous item if we are not on the first page. #}
       {% if items.previous %}
         {% set prev_button_classes = [
-          'hds-button',
-          'hds-pagination__button-prev'
+          'hds-button'
           ]
         %}
-        <a href="{{ items.previous.href }}" role="button" title="{{ 'Go to previous page'|t({}, {'context': 'Pagination previous page link title'}) }}" rel="prev"{{ items.previous.attributes.addClass(prev_button_classes)|without('href', 'title', 'rel') }}>
-          {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-left'} %}
-          <span aria-hidden="true" class="hds-pagination__button-prev-label">{{ items.previous.text|default('Previous'|t({}, {'context': 'Pagination previous page link text'})) }}</span>
-        </a>
+        <ul class="js-pager__items hds-pagination__button-prev">
+          <li>
+            <a href="{{ items.previous.href }}" role="button" title="{{ 'Go to previous page'|t({}, {'context': 'Pagination previous page link title'}) }}" aria-label="{{ 'Go to previous page'|t({}, {'context': 'Pagination previous page link title'}) }}" rel="prev"{{ items.previous.attributes.addClass(prev_button_classes)|without('href', 'title', 'rel') }}>
+              {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-left'} %}
+              <span aria-hidden="true" class="hds-pagination__button-prev-label">{{ items.previous.text|default('Previous'|t({}, {'context': 'Pagination previous page link text'})) }}</span>
+            </a>
+          </li>
+        </ul>
       {% else %}
         <button type="button" disabled title="{{ 'Go to previous page'|t({}, {'context': 'Pagination previous page link title'}) }}" class='hds-button hds-pagination__button-prev'>
           {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-left'} %}
@@ -94,14 +97,17 @@
       {# Print next item if we are not on the last page. #}
       {% if items.next %}
         {% set next_button_classes = [
-          'hds-button',
-          'hds-pagination__button-next'
+          'hds-button'
           ]
         %}
-        <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t({}, {'context': 'Pagination next page link title'}) }}" role="button" rel="next"{{ items.next.attributes.addClass(next_button_classes)|without('href', 'title', 'rel') }}>
-          <span aria-hidden="true" class="hds-pagination__button-next-label">{{ items.next.text|default('Next'|t({}, {'context': 'Pagination next page link text'})) }}</span>
-          {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-right'} %}
-        </a>
+        <ul class="js-pager__items hds-pagination__button-next">
+          <li>
+            <a href="{{ items.next.href }}" title="{{ 'Go to next page'|t({}, {'context': 'Pagination next page link title'}) }}" aria-label="{{ 'Go to next page'|t({}, {'context': 'Pagination next page link title'}) }}" role="button" rel="next"{{ items.next.attributes.addClass(next_button_classes)|without('href', 'title', 'rel') }}>
+              <span aria-hidden="true" class="hds-pagination__button-next-label">{{ items.next.text|default('Next'|t({}, {'context': 'Pagination next page link text'})) }}</span>
+              {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'angle-right'} %}
+            </a>
+          </li>
+        </ul>
       {% else %}
         <button type="button" disabled title="{{ 'Go to next page'|t({}, {'context': 'Pagination next page link title'}) }}" class='hds-button hds-pagination__button-next'>
           <span aria-hidden="true" class="hds-pagination__button-next-label">{{ items.next.text|default('Next'|t({}, {'context': 'Pagination next page link text'})) }}</span>
