UHF-X-4.0.0-rc: Fixed inpath boldness in megamenu.

--- a/src/scss/06_components/navigation/global/_megamenu.scss
+++ b/src/scss/06_components/navigation/global/_megamenu.scss
@@ -46,6 +46,7 @@
   padding-left: $spacing - $spacing-quarter;
 }
 
+.megamenu__link.megamenu__link--in-path,
 .megamenu__link.is-active {
   font-weight: bold;
 }
