--- a/src/scss/06_components/block/__index.scss
+++ b/src/scss/06_components/block/__index.scss
@@ -1,6 +1,7 @@
 @import 'branding-navigation';
 @import 'branding';
 @import 'language-switcher';
+@import 'header-language-links';
 @import 'mobile-navigation';
 @import 'page-title';
 @import 'react-and-share';
