--- a/src/scss/06_components/block/_header-language-links.scss
+++ b/src/scss/06_components/block/_header-language-links.scss
@@ -13,7 +13,7 @@ $-footerlink-target-size: 44px;
   align-self: center;
   // background-color: $color-silver-light;
   // border-bottom: 1px solid $color-black-20;
-  grid-area: lang;
+  grid-area: otherlangs;
   order: 3;
   // padding: 12px $spacing;
   transition: margin-top 0.3s ease 1s; // The transition delay here combats a bit for the accidental scroll ups during scrolling
@@ -25,7 +25,6 @@ $-footerlink-target-size: 44px;
     background-color: transparent;
     border-bottom: 0 none;
     border-top: none;
-    grid-area: otherlangs;
     margin-left: auto;
     order: 2;
     padding: 0;
@@ -42,10 +41,13 @@ $-footerlink-target-size: 44px;
   //   }
   // }
 }
-.headerlanguagelinks__item {}
+
+.headerlanguagelinks__item {
+  
+}
 
 .headerlanguagelinks__toggle {
-/*hide placeholder*/
+  text-decoration: none;
   &::before {
     @include pseudo-icon('globe', $spacing-double, black);
     @include hover-link-arrow-transition;
