--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -7,7 +7,7 @@ $-branding-icon-size-desktop: $spacing-double;
   display: grid;
   grid-template-areas:
     '. logo . brand toggle .'
-    'lang lang lang lang lang lang'
+    'lang lang lang lang otherlangs otherlangs'
     'menu menu menu menu menu menu';
   grid-template-columns: var(--header-branding-padding) auto 1fr auto auto var(--header-branding-padding);
   grid-template-rows: var(--branding-height) auto auto;
