--- a/templates/block/block--headerlanguagelinks.html.twig
+++ b/templates/block/block--headerlanguagelinks.html.twig
@@ -29,17 +29,10 @@
 {% set attributes = attributes.addClass('block__headerlanguagelinks') %}
 
 <div {{ attributes.setAttribute('data-hdbt-selector','headerlanguagelinks').setAttribute('id', null) }}>
- <a href="#morelangs" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--open">
- <span>
-
-</span>
- </a>
- <a href="#" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--close">
- <span>
-</span>
- </a>
+ <a href="#morelangs" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--open"><span></span></a>
+ <a href="#" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--close"><span></span></a>
 {# override link list block to inject our own wrapper class #}
-  {% block content %}
-    {{ content }}
-  {% endblock %}
 </div>
+{% block content %}
+  {{ content }}
+{% endblock %}
