--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -31,6 +31,8 @@ $-menu-transition-duration: 0.3s;
 .mega-and-mobilemenu .block--language-switcher,
 .mega-and-mobilemenu .mobile-menu-fallback,
 .mega-and-mobilemenu .mmenu__footer {
+  padding-top: $spacing;
+
   @include breakpoint($breakpoint-l) {
     display: none;
   }
