--- a/templates/navigation/menu--headerlanguagelinks.html.twig
+++ b/templates/navigation/menu--headerlanguagelinks.html.twig
@@ -45,15 +45,13 @@
 
 <div class="headerlanguagelinks__wrapper">
     {% for item in items %}
-
-
-     {{ _self.link_render(item) }}
+    {{ _self.link_render(item) }}
     {% if item.below %}
-        <div>
+        <div class="headerlanguagelinks__group">
         {% for below in item.below %}
             {{ _self.link_render(below) }}
         {% endfor %}
         </div>
     {% endif %}
-    {% endfor %}
 </div>
+
