--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -49,11 +49,32 @@
 
       {% if page.header_branding %}
         {#
-          Render the header branding region without the external menu block.
-          External mega menu block will be rendered manually in external fallback menu.
+          Render the header branding region blocks in a specific order.
+          Exclude the external menu mega menu block as it will be rendered
+          manually in external fallback menu.
           See. block--external-menu-block-fallback.html.twig:61.
         #}
-        {{ page.header_branding|without('external_menu_mega_menu') }}
+        {% set header_branding_blocks = [
+          'external_menu_mobile_menu',
+          active_theme ~ '_sitebranding',
+          active_theme ~ '_language_switcher',
+          active_theme ~ '_brandingnavigation',
+          active_theme ~ '_mobile_navigation',
+        ] %}
+
+        {% set exclude_header_branding_blocks = [
+          'external_menu_mega_menu'
+        ] %}
+
+        <div{{ attributes.addClass('header-branding').setAttribute('id', 'header-branding') }}>
+          {% for block in header_branding_blocks %}
+            {{ drupal_entity('block', block) }}
+          {% endfor %}
+
+          {{ page.header_branding|without(
+            header_branding_blocks|merge(exclude_header_branding_blocks)|join(',')
+          ) }}
+        </div>
       {% endif %}
 
       {% if page.header_bottom %}
