Switched block--language-switcher styles to point to language-wrapper.

--- a/src/scss/06_components/block/_language-switcher.scss
+++ b/src/scss/06_components/block/_language-switcher.scss
@@ -1,4 +1,4 @@
-.block--language-switcher {
+.language-wrapper {
   align-self: center;
   background-color: $color-silver-light;
   border-bottom: 1px solid $color-black-20;
