UHF-6762: Added overrideable twig blog to external menu fallback template.

--- a/templates/block/block--external-menu-block-fallback.html.twig
+++ b/templates/block/block--external-menu-block-fallback.html.twig
@@ -64,7 +64,9 @@
           <div class="mmenu__footer js-mmenu__footer">
 
             {% set inside_cssmenu = true %}
-            {{ drupal_entity('block', 'external_header_top_navigation')}}
+            {% block header_top_navigation %}
+              {{ drupal_entity('block', 'external_header_top_navigation')}}
+            {% endblock header_top_navigation %}
 
             <div class="mmenu__logo">
               {% set link_label %}
